--- a/css/index.css
+++ b/css/index.css
@@ -1,142 +1,28 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
 * {
   box-sizing: border-box;
+  border: 1px blue solid;
+  max-width: 100%;
 }
 html {
   font-size: 62.5%;
 }
 html,
 body {
-  color: black;
+  color: #383838;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  font-family: 'Baloo Thambi 2', cursive;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  color: black;
+  color: #383838;
+  font-family: 'Baloo Tamma 2', cursive;
 }
 h1 {
   font-size: 3.7rem;
@@ -157,6 +43,16 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 800px) {
+  .containerSK {
+    max-width: 600px;
+  }
+}
+@media (max-width: 500px) {
+  .containerSK {
+    max-width: 320px;
+  }
+}
 #top-navSK {
   padding: 1% 0;
   display: flex;
@@ -171,12 +67,25 @@ p {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  width: 100%;
 }
 #top-navSK .other-nav-divSK h1 {
-  width: 45%;
+  width: 50%;
+  margin-top: 0;
+}
+@media (max-width: 800px) {
+  #top-navSK .other-nav-divSK h1 {
+    width: 100%;
+    text-align: center;
+  }
 }
 #top-navSK .other-nav-divSK .nav-imageSK {
-  width: 5%;
+  width: 8.5%;
+}
+@media (max-width: 800px) {
+  #top-navSK .other-nav-divSK .nav-imageSK {
+    display: none;
+  }
 }
 #top-navSK .nav-sectionSK {
   width: 100%;
@@ -186,22 +95,60 @@ p {
   align-items: center;
 }
 #top-navSK .nav-sectionSK nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  width: 50%;
+  width: 55%;
+}
+@media (max-width: 800px) {
+  #top-navSK .nav-sectionSK nav {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
 }
 #top-navSK .nav-sectionSK nav a {
   margin-left: 2%;
   font-size: 1.8rem;
+}
+@media (max-width: 800px) {
+  #top-navSK .nav-sectionSK nav a {
+    display: block;
+    background-color: #eb7c74;
+    width: 200px;
+    height: 45px;
+    font-size: 2rem;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    margin: 1% 1%;
+  }
+  #top-navSK .nav-sectionSK nav a:hover {
+    background-color: white;
+    color: #eb7c74;
+  }
+}
+@media (max-width: 500px) {
+  #testimonialSK {
+    width: 80%;
+    text-align: center;
+    order: 10;
+  }
 }
 #bottom-navSK {
   padding: 1% 0;
 }
 #bottom-navSK .nav-sectionSK {
   margin: 1% auto;
-  width: 18%;
+  width: 20%;
+}
+@media (max-width: 800px) {
+  #bottom-navSK .nav-sectionSK {
+    width: 35%;
+  }
+}
+@media (max-width: 500px) {
+  #bottom-navSK .nav-sectionSK {
+    width: 100%;
+  }
 }
 #bottom-navSK .nav-sectionSK nav {
   display: flex;
@@ -209,13 +156,126 @@ p {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 500px) {
+  #bottom-navSK .nav-sectionSK nav {
+    justify-content: center;
+  }
+}
 #bottom-navSK .nav-sectionSK a {
   font-size: 1.5rem;
+}
+@media (max-width: 500px) {
+  #bottom-navSK .nav-sectionSK a {
+    margin: 1%;
+  }
 }
 #bottom-navSK h4 {
   font-size: 1.5rem;
   text-align: center;
 }
-#main {
-  border: 1px solid black;
+.hero-ES {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.hero-ES p {
+  width: 60%;
+}
+@media (max-width: 500px) {
+  .hero-ES {
+    width: 100%;
+  }
+}
+.productivity-images-ES {
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
+}
+.productivity-images-ES img {
+  width: 40%;
+  border: 1.5px #eb7c74 solid;
+  border-radius: 10px;
+}
+.categories-container-ES {
+  display: flex;
+  justify-content: space-evenly;
+}
+@media (max-width: 500px) {
+  .categories-container-ES {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.categories-info-and-img-ES {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+}
+.categories-info-and-img-ES .categories-info-ES,
+.categories-info-and-img-ES .categories-section-img-container-ES {
+  width: 40%;
+}
+.categories-info-and-img-ES img {
+  width: 50%;
+  height: 40vh;
+  border-radius: 20px;
+  border: 2px solid lightcoral;
+}
+.categories-info-and-img-ES h2 {
+  text-align: center;
+}
+.categories-section-ES {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.categories-ES {
+  width: 22%;
+  padding: 0 0.5%;
+  background: rgba(211, 211, 211, 0.548);
+  border: 2px solid #eb7c74;
+  border-radius: 15px;
+}
+@media (max-width: 500px) {
+  .categories-ES {
+    width: 100%;
+    align-items: center;
+    margin: 3% 0;
+  }
+}
+.categories-ES img {
+  border: 1.5px #eb7c74 solid;
+  border-radius: 10px;
+}
+.categories-ES h4 {
+  text-align: center;
+  font-size: 2rem;
+  border-radius: 20px;
+  border: 1px solid lightcoral;
+}
+.categories-ES .button-container-ES {
+  display: flex;
+  justify-content: center;
+}
+.categories-ES .button-container-ES button {
+  font-family: 'Baloo Tamma 2', cursive;
+  border-radius: 20px;
+  border: 1px solid lightcoral;
+  background-color: lightcoral;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  margin-bottom: 2%;
+}
+@media (max-width: 500px) {
+  .categories-ES .button-container-ES {
+    width: 100%;
+  }
 }
